--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -1570,6 +1570,50 @@ new challenges arising in the field --without limiting itself to specific techno
 with relatively short life spans.},
 }
 
+@Article{yanoda2015,
+  author        = {Yoneda, Hitoki and Inubushi, Yuichi and Nagamine, Kazunori and Michine, Yurina and Ohashi, Haruhiko and Yumoto, Hirokatsu and Yamauchi, Kazuto and Mimura, Hidekazu and Kitamura, Hikaru and Katayama, Tetsuo and Ishikawa, Tetsuya and Yabashi, Makina},
+  journal       = {Nature},
+  title         = {Atomic inner-shell laser at 1.5-{\aa}ngstr{\"o}m wavelength pumped by an X-ray free-electron laser},
+  year          = {2015},
+  number        = {7566},
+  pages         = {446--449},
+  volume        = {524},
+  abstract      = {A copper target is used to achieve an atomic laser in the hard-X-ray regime with strong amplified spontaneous coherent emission at a wavelength ten times shorter than previous lasers have achieved.},
+  bdsk-url-1    = {https://doi.org/10.1038/nature14894},
+  da            = {2015/08/01},
+  date-added    = {2021-10-23 14:32:18 +0000},
+  date-modified = {2021-10-23 14:32:18 +0000},
+  doi           = {10.1038/nature14894},
+  id            = {Yoneda2015},
+  isbn          = {1476-4687},
+  ty            = {JOUR},
+}
+
+@Article{handa2010,
+  author   = {Soichiro Handa and Takashi Kimura and Hidekazu Mimura and Hirokatsu Yumoto and Satoshi Matsuyama and Yasuhisa Sano and Kenji Tamasaku and Yoshinori Nishino and Makina Yabashi and Tetsuya Ishikawa and Kazuto Yamauchi},
+  journal  = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  title    = {Extended knife-edge method for characterizing sub-10-nm X-ray beams},
+  year     = {2010},
+  issn     = {0168-9002},
+  note     = {X-Ray Mirror},
+  number   = {2},
+  pages    = {246-250},
+  volume   = {616},
+  abstract = {We describe a method for characterizing sub-10-nm X-ray beams using knife-edge scanning with dark-field geometry. Beam profile measurement by the conventional dark-field method is simulated numerically, and the signal intensity is found to depend strongly on the incident angle of the beam components. A numerical procedure to correct the dependence and to determine the actual beam profile is presented.},
+  doi      = {10.1016/j.nima.2009.10.131},
+  keywords = {X-ray optics, X-ray focusing, Nanobeams},
+}
+
+@Article{yumoto2020,
+  author        = {Hirokatsu Yumoto and Yuichi Inubushi and Taito Osaka and Ichiro Inoue and Takahisa Koyama and Kensuke Tono and Makina Yabashi and Haruhiko Ohashi},
+  journal       = {preprint arXiv:2003.10246},
+  title         = {Nanofocusing optics for an X-ray free-electron laser generating an extreme intensity of 100 EW/cm$^2$ using total reflection mirrors},
+  year          = {2020},
+  archiveprefix = {arXiv},
+  eprint        = {2003.10246},
+  primaryclass  = {physics.app-ph},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
